some random changes...
from a long time ago

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
     <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="./flot/excanvas.min.js"></script><![endif]-->
     <script language="javascript" type="text/javascript" src="./flot/jquery.js"></script>
 	<script language="javascript" type="text/javascript" src="./flot/jquery.flot.js"></script>
-	<script language="javascript" type="text/javascript" src="./flot/jquery.flot.downsample.js"></script>
+	<!--<script language="javascript" type="text/javascript" src="./flot/jquery.flot.downsample.js"></script>-->
 	<script language="javascript" type="text/javascript" src="./flot/jquery.flot.fillbetween.min.js"></script>
 	<script language="javascript" type="text/javascript" src="./flot/jquery.flot.navigate.min.js"></script>
 	<script language="javascript" type="text/javascript" src="./flot/jquery.flot.resize.min.js"></script>
