--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--[if lte IE 8]>
     <script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/excanvas.min.js"></script>
     <![endif]-->
-    <script language="javascript" type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script language="javascript" type="text/javascript" src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/jquery.flot.min.js"></script>
 	<!--<script language="javascript" type="text/javascript" src="./flot/jquery.flot.downsample.js"></script>-->
 	<script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/jquery.flot.fillbetween.min.js"></script>
@@ -17,15 +17,15 @@
 	<script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/jquery.flot.time.min.js"></script>
     <script language="javascript" type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
     <script language="javascript" type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.min.js"></script>
-    <script language="javascript" type="text/javascript" src="//cdn.socket.io/socket.io-1.1.0.js"></script>
+    <script language="javascript" type="text/javascript" src="//cdn.socket.io/socket.io-1.2.0.js"></script>
     <script language="javascript" type="text/javascript" src="app/client/js/app.js"></script>
 </head>
 <body>
     <div id="header">
         <div id="header-wrap">
             <span id="title-box">
-                <div id="title">Crypto Price Chart</div>
-                <div id="punchline">and price ticker!</div>
+                <div id="title">Crypto Price Ticker</div>
+                <div id="punchline">with Charts!</div>
             </span>
             <span id="selections">
                 <div id="currency">
